--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -5,7 +5,7 @@ set -g prefix C-a
 unbind C-b
 
 # キーストロークのディレイを減らす
-set -sg escape-time 1
+set -sg escape-time 0
 
 # ウィンドウのインデックスを1から始める
 set -g base-index 1
@@ -41,8 +41,8 @@ bind -r L resize-pane -R 5
 
 ###### ステータスバーを設定########
 # ステータスバーの色を設定する
-set -g status-fg blue
-set -g status-bg white
+set -g status-fg colour226
+set -g status-bg colour75
 # 描画更新間隔秒。デフォルトは15s
 set-option -g status-interval 1
 # ステータスバーをトップに配置する
@@ -51,7 +51,7 @@ set-option -g status-position top
 set-option -g status-left-length 60
 set-option -g status-right-length 30
 # 左パネルを設定する
-set -g status-left "[#H] Session: <#S> W:#I P:#P"
+set -g status-left "[#H] Session: <#S> Window:#I Pane:#P"
 # 右パネルを設定する
 set -g status-right "[%Y-%m-%d(%a) %H:%M]"
 # ウィンドウリストの位置を中心寄せにする
@@ -59,19 +59,20 @@ set -g status-justify centre
 ## ヴィジュアルノーティフィケーションを有効にする
 setw -g monitor-activity on
 set -g visual-activity on
-# 区切り線のスタイル
-set  -g pane-border-bg           white
-set  -g pane-border-fg           black
-setw -g window-status-current-fg black
+
+# Paneの区切り線
+set  -g pane-border-bg           colour75
+set  -g pane-border-fg           colour226
+setw -g window-status-current-fg colour214
 
 # アクティブなウィンドウを目立たせる
-setw -g window-status-current-fg yellow
-setw -g window-status-current-bg blue
+setw -g window-status-current-fg colour226
+setw -g window-status-current-bg colour207
 setw -g window-status-current-attr bright
 
 # アクティブなペインを目立たせる
-set -g pane-active-border-fg white
-set -g pane-active-border-bg blue
+set -g pane-active-border-fg colour227
+set -g pane-active-border-bg colour196
 
 # set color
 set-option -g default-terminal screen-256color
@@ -83,7 +84,6 @@ bind -n WheelUpPane if-shell -F -t = "#{mouse_any_flag}" "send-keys -M" "if -Ft=
 # 親端末のTERMがxtermの場合
 set -g terminal-overrides 'xterm*:smcup@:rmcup@'
 
-### 以下は端末依存の設定 ###
 # コピーモード設定
 ## クリップボード共有を有効にする
 set-option -g default-command "reattach-to-user-namespace -l zsh"
