--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -82,7 +82,8 @@ set-option -g default-terminal screen-256color
 set -g terminal-overrides 'xterm:colors=256'
 
 # mouse mode on
-set-option -g mouse on
+setw -g mouse on
+#set-option -g mouse on
 bind -n WheelUpPane if-shell -F -t = "#{mouse_any_flag}" "send-keys -M" "if -Ft= '#{pane_in_mode}' 'send-keys -M' 'copy-mode -e'"
 # 親端末のTERMがxtermの場合
 set -g terminal-overrides 'xterm*:smcup@:rmcup@'
