--- a/osx-plist/localhost.add-sshagent.plist
+++ b/osx-plist/localhost.add-sshagent.plist
@@ -3,10 +3,10 @@
 <plist version="1.0">
 <dict>
     <key>Label</key>
-    <string>ssh-add-a</string>
+    <string>localhost.add-sshagent</string>
     <key>ProgramArguments</key>
     <array>
-        <string>usr/bin/ssh-add</string>
+        <string>/usr/bin/ssh-add</string>
         <string>-A</string>
     </array>
     <key>RunAtLoad</key>
